--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xenta-psdthumbnailer (1.3.2) batik; urgency=medium
+
+  * Perbaikan berkas debian/*
+  * Penambahan Header script 
+
+ -- Dindin Hernawan (Xenta OS) <dindin_hernawan@yahoo.com>  Tue, 12 Feb 2019 10:12:50 +0700
+
 xenta-psdthumbnailer (1.3.1) arok; urgency=medium
 
   * Perbaikan berkas debian/*
