--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+xenta-psdthumbnailer (1.3.3+xentaos2) arok; urgency=medium
+
+  * Perbaikan berkas debian/*
+  * Penambahan Header script 
+
+ -- Dindin Hernawan (Xenta OS) <root@dev.xentaos.org>  Sun, 12 Nov 2017 01:53:42 +0700 
+
 xenta-psdthumbnailer (1.3.1) arok; urgency=medium
 
   * Perbaikan berkas debian/*
