--- a/debian/changelog
+++ b/debian/changelog
@@ -1,17 +1,15 @@
-<<<<<<< HEAD
-xenta-psdthumbnailer (1.3.3+xentaos2) arok; urgency=medium
-=======
-xenta-psdthumbnailer (1.3.2) batik; urgency=medium
->>>>>>> 937a9c9bdad5c26f86d63f24539dfcbd24755809
+xenta-psdthumbnailer (1.3.3+xentaos2) batik; urgency=medium
+
+  * Pengepakan paket buat rilis "batik" stable
+
+ -- Dindin Hernawan (Xenta OS) <dindin_hernawan@yahoo.com>  Sat, 02 Mar 2019 23:32:32 +0700 
+
+xenta-psdthumbnailer (1.3.2) arok; urgency=medium
 
   * Perbaikan berkas debian/*
   * Penambahan Header script 
 
-<<<<<<< HEAD
  -- Dindin Hernawan (Xenta OS) <root@dev.xentaos.org>  Sun, 12 Nov 2017 01:53:42 +0700 
-=======
- -- Dindin Hernawan (Xenta OS) <dindin_hernawan@yahoo.com>  Tue, 12 Feb 2019 10:12:50 +0700
->>>>>>> 937a9c9bdad5c26f86d63f24539dfcbd24755809
 
 xenta-psdthumbnailer (1.3.1) arok; urgency=medium
 
